--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nasa",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -35,6 +36,7 @@
     "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "tsc": "^2.0.4",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
